--- a/twitter_analytics.ipynb
+++ b/twitter_analytics.ipynb
@@ -21,10 +21,10 @@
     "from collections import Counter\n",
     "import sys\n",
     "\n",
-    "access_token = \"1000996991860527105-QFYZ9XqSNaMWs6rJNRtujOrzn1KBxi\"\n",
-    "access_token_secret = \"MbR7g7I6r3uPIJoGuOYQlhej5TgZGfB2jJ9l0aGejXfdf\"\n",
-    "consumer_key = \"ZpYly1EpybyM0wBVdFiulvxEh\"\n",
-    "consumer_secret = \"kE0a9yq13tchDYkq9WLJ2AnnPMmYnfkRufYxhPoyTDGIDYgLJM\""
+    "access_token = \"\"\n",
+    "access_token_secret = \"\"\n",
+    "consumer_key = \"\"\n",
+    "consumer_secret = \"\""
    ]
   },
   {
